New in v1.1.0 (????/??/??)
--------------------------

When possible, fsync using a writable file descriptor.  This may help
with cygwin.  (Requested/tested by Dave Kempe.)

Support req 104755: Added --preserve-numerical-ids option, which makes
rdiff-backup preserve uids/gids instead of unames/gnames.  (Suggested
by Wiebe Cazemier)


New in v1.0.2 (????/??/??)
--------------------------

Fix for bug 14545 which was introduced in version 1.0.1:  Quoting
caused a spurious security violation.  (Important for Mac OS X)

An error reading carbonfile data on Mac OS X should no longer cause a
crash.  (Thanks to Kevin Horton for testing.)

Carbonfile support now defaults to off, even if the system appears to
support it.  It can be manually enabled with the --carbonfile switch.
If you know something about Mac OS X and want to look at the
carbonfile code so it can be re-enabled by default, please do so :)
(help available from list)


New in v1.0.1 (2005/09/10)
--------------------------

Fix for "'filetype' of type exceptions.KeyError" error when restoring.
Test case provided by Davy Durham.  (The problem was the
mirror_metadata file could become un-synced when a file is deleted
when rdiff-backup is running and later the directory that file is in
gets deleted.)

Librsync signature blocksize now based on square root of file length.

rdiff-backup now writes its PID to current_mirror marker (suggested by
Kevin Spicer).

fsync_directories defaults to None, to avoid errors in testing
(suggestion by Charles Duffy).

bug#14209: Security bug with --restrict-read-only and
--restrict-update-only allowed file statting and directory listing
outside path.  Bug with --restrict option allowed writes outside path.
(Reported by Charles Duffy.)

bug #14304: Python 2.2 compatibility spoiled by device files.

lchown no longer required, which is good news for Mac OS X 10.3.


New in v1.0.0 (2005/08/14)
--------------------------
